--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <link rel="canonical" href="">
 </head>
 <body id="home" data-spy="scroll" data-target="#main-nav">
-    <nav id="main-nav" class="navbar navbar-expand-md navbar-light fixed-top py-4" role="navigation" aria-label="primary">
-        <div class="container">
-            <h1 class="d-inline align-middle"><a href="#home" class="navbar-brand" title="Book Title">Create The Decision Within Defying All The Odds</a></h1>
+    <nav id="main-nav" class="navbar d-flex navbar-expand-md navbar-light fixed-top py-4" role="navigation" aria-label="primary">
+        <div class="d-flex align-items-center text-center justify-content-between">     
+            <h5><a id="title-book">Create The Decision Within Defying All The Odds</a></h5>
+        </div>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button>
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
@@ -27,37 +28,34 @@
             </div>
         </div>
     </nav>
+    
     <main role="main">
-        <section id="book" class="mb-4" role="region">
+        <section id="book" class="mb-4 text-white" role="region">
             <div class="overlay">
                 <div class="container pt-4">
-                    <div class="row">
+                    <div class="row d-flex align-items-center">
                         <div class="col-lg-6 text-center">
-                            <h1 class="display-5">Create The Decision Within Defying All The Odds</h1>
-                            <h2 class="d-inline h5 font-weight-normal">The moment I started to invest in myself 
-                                is when everything changed.
-                                The moment I stated to bet on the future me is when I began to defy all the odds in life.
-                                My hope for you when reading this book 
-                                Create the Decision Within defying all the odds is that it will give you the fate, that it will give you the belief in yourself that anything is possible. 
-                                By making the decision to put God first in my life everything changed. 
-                                Everything has gotten better for me! I’m not saying that it’s been easy but it’s amazing to know that having God is in your corner to help you. 
-                                As you read this book my hope for you is to put yourself in the stories and the ideas within the book in the prime of your life and know that you can truly defy all the odds.
-                            </h2>
-                            <p class="mt-3"><a href="#" class="btn btn-outline-secondary btn-lg font-weight-bold mr-2">Coming Soon!</a></p>
+                            <h1 class="display-5 pt-4">Create The Decision Within Defying All The Odds</h1>
+                            <p class="card-text h5 font-weight-normal">The moment I started to invest in myself is when everything changed. The moment I stated to bet on the future me Is when I began to defy all the odds in life.</p>
+                            <p class="card-text h5 font-weight-normal">My hope for you when reading this book Create the Decision Within defying all the odds is that it will give you the fate, that it will give you the belief in yourself that anything is possible. </p>
+                            <p class="card-text h5 font-weight-normal">By making the decision to put God first in my life everything changed. Everything has gotten better for me! I’m not saying that it’s been easy but it’s amazing to know that having God is in your corner to help you.</p>
+                            <p class="card-text h5 font-weight-normal">As you read this book my hope for you is to put yourself in the stories and the ideas within the book in the prime of your life and know that you can truly defy all the odds.</p>
+                            <p class="mt-3"><a href="#" class="btn btn-outline-secondary btn-lg font-weight-bold mr-2 text-white">Coming Soon!</a></p>
                         </div>
-                        <div class="col-lg-6"><img src="img/Book_Cover.jpg" class="img-fluid d-none d-lg-block" alt="Book Title image" width="425px" height="400px" title="Book Title"></div>
+                        <div class="col-lg-6"><img src="img/Book_Cover.jpg" class="img-fluid d-none d-lg-block" alt="Create The Decision Within Defying All The Odds" width="425px" height="400px" title="Create The Decision Within Defying All The Odds"></div>
                     </div>
                 </div>
             </div>
         </section>
         <section id="about" class="mb-4" role="region">
-            <h2 class="display-4 text-center">About the Book</h2>
+            <h2 class="display-4 text-center">To buy about the Book</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card text-center border-primary">
                             <div class="card-body">
-                                <h3 class="text-primary">Info About Book</h3>
+                                <h3 class="text-primary">Zelle</h3>
+                                <img src="img/alex_zelle.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
@@ -65,7 +63,8 @@
                     <div class="col-md-4">
                         <div class="card text-center bg-primary">
                             <div class="card-body">
-                                <h3 class="text-white">More Book Info</h3>
+                                <h3 class="text-white">Venmo</h3>
+                                <img src="img/alex_venmo.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
@@ -73,7 +72,8 @@
                     <div class="col-md-4">
                         <div class="card text-center border-primary">
                             <div class="card-body">
-                                <h3 class="text-primary">Even More Info</h3>
+                                <h3 class="text-primary">CashApp</h3>
+                                <img src="img/alex_cashapp.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
@@ -81,20 +81,23 @@
                 </div>
             </div>
         </section>
+        
         <section id="author" class="bg-secondary text-white mb-4" role="region">
             <h2 class="display-4 text-center">Meet the Author</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="mb-2 text-center">
-                            <!--Note: switch out the below icon to an image of the author-->
                             <img src="img/Alejandro_Quintero.png" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero">
                         </div>
                     </div>
                     <div class="col-md-9">
                         <div class="card-body pt-0">
-                            <p class="card-text">My name is Alejandro Quintero Rosales the author of this book and if I have the courage to take action, the courage to move forward and implement all the ideas, despite being scared in despite having fear.</p>
-                            <p class="card-text">My hope for you as you go through and finish this book that it will move your soul and put into your heart that with God all things are possible.</p>
+                            <p class="card-text">My name is Alejandro Quintero Rosales the author of this book and if I have the courage to take action, the courage to move forward and implement all the ideas, despite being scared in despite having fear. My hope for you as you go through and finish this book that it will move your soul and put into your heart that with God all things are possible.</p>
+                            <p class="card-text">I am a motivational keynote speaker one of the things that I am most passionate about is helping people come to the realization that it is not where we come from where we are that will determine the person that we choose to become. With my unique life experience I can show you that you also can defy all the odds!</p>
+                            <p class="card-text"> In my upcoming book create a decision within defying all  the odds I go deep into the importance of excepting everything that’s happening to you and accepting  who you truly are by recovering from everything that’s ever happened and the person that you once were, that you will discover the person that you could possibly be. 
+                            It is with the right guidance and the ability to guide yourself towards a target and the guy that will help you put together the right structure for you to start executing each and every single day with sufferance that you will acquire everything that you possibly want.
+                            </p>
                             <div class="social-icons">
                                 <h3 class="d-inline mr-2">Follow</h3>
                                 <a href="https://www.facebook.com/aqrosales" title="Facebook"><i class="fab fa-facebook-f fa-2x"></i></a>
@@ -154,15 +157,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-<script>
-//for the nav scrolling to each section
-$("#main-nav a").click(function(e) {
-	e.preventDefault();
-	var position = $($(this).attr("href")).offset().top;
-	$("body, html").animate({ scrollTop: position - 110 }, 800);
-});
-</script>
 
 </body>
 </html>
