--- a/index.html
+++ b/index.html
@@ -48,24 +48,15 @@
             </div>
         </section>
         <section id="about" class="mb-4" role="region">
-            <h2 class="display-4 text-center">To buy about the Book</h2>
+            <h2 class="display-4 text-center">To buy the Book</h2>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card text-center border-primary">
-                            <div class="card-body">
-                                <h3 class="text-primary">Zelle</h3>
-                                <img src="img/alex_zelle.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <div class="card text-center bg-primary">
                             <div class="card-body">
                                 <h3 class="text-white">Venmo</h3>
-                                <img src="img/alex_venmo.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="https://account.venmo.com/u/Alejandro-QuintrtoRosales"><img src="img/Venmo.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero"></a>
+                                <p class="text-muted">I’d like to invite you to buy this book today through Venmo. Click on the icon.</p>
                             </div>
                         </div>
                     </div>
@@ -73,8 +64,8 @@
                         <div class="card text-center border-primary">
                             <div class="card-body">
                                 <h3 class="text-primary">CashApp</h3>
-                                <img src="img/alex_cashapp.jpg" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero" width="300px" height="350px">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="https://cash.app/$Aqr93?fbclid=IwAR3fmtUXSXynpIYIw_VZ3y4twleGfPL9JmlToMKTy5_zKHDFroYGXC6mxlU"><img src="img/CashApp.webp" class="card-img" alt="Alejandro Quintero" title="Alejandro Quintero"></a>
+                                <p class="text-muted">I’d like to invite you to buy this book today through Cash App. Click on the icon.</p>
                             </div>
                         </div>
                     </div>
