--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og:http://ogp.me/ns#">
 <head>
-<title>Create The Decision Within Defying All The Odds</title>
+<title>CREATE THE DECISION WITHIN DEFYING ALL THE ODDS</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,7 +15,7 @@
 <body id="home" data-spy="scroll" data-target="#main-nav">
     <nav id="main-nav" class="navbar d-flex navbar-expand-md navbar-light fixed-top py-4" role="navigation" aria-label="primary">
         <div class="d-flex align-items-center text-center justify-content-between">     
-            <h5><a id="title-book">Create The Decision Within Defying All The Odds</a></h5>
+            <h5><a id="title-book">CREATE THE DECISION WITHIN DEFYING ALL THE ODDS</a></h5>
         </div>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button>
             <div id="navbarCollapse" class="collapse navbar-collapse">
@@ -35,7 +35,7 @@
                 <div class="container pt-4">
                     <div class="row d-flex align-items-center">
                         <div class="col-lg-6 text-center">
-                            <h1 class="display-5 pt-4">Create The Decision Within Defying All The Odds</h1>
+                            <h1 class="display-5 pt-4">CREATE THE DECISION WITHIN DEFYING ALL THE ODDS</h1>
                             <p class="card-text h5 font-weight-normal">The moment I started to invest in myself is when everything changed. The moment I stated to bet on the future me Is when I began to defy all the odds in life.</p>
                             <p class="card-text h5 font-weight-normal">My hope for you when reading this book Create the Decision Within defying all the odds is that it will give you the fate, that it will give you the belief in yourself that anything is possible. </p>
                             <p class="card-text h5 font-weight-normal">By making the decision to put God first in my life everything changed. Everything has gotten better for me! I’m not saying that it’s been easy but it’s amazing to know that having God is in your corner to help you.</p>
